# fortran-coarray-examples

./: CMakeLists.txt  Readme.md  meson.build
.github/workflows/: cmake.yml  meson.yml
src/: meson.build
